--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,7 @@
 # DO NOT REMOVE. CLOUDLINUX PASSENGER CONFIGURATION BEGIN
-PassengerAppRoot "/home8/oralandd/public_html/staging.oralanddentalcare.com.np"
+PassengerAppRoot "/home8/oralandd/nodejsapp"
 PassengerBaseURI "/"
+PassengerNodejs "/home8/oralandd/nodevenv/nodejsapp/18/bin/node"
 PassengerAppType node
 PassengerStartupFile server.js
 # DO NOT REMOVE. CLOUDLINUX PASSENGER CONFIGURATION END
