--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "^14.2.11",
     "react": "^18",
     "react-dom": "^18",
+    "react-floating-whatsapp": "^5.0.8",
     "react-ionicons": "^4.2.1",
     "swiper": "^11.1.14",
     "tailwind": "^4.0.0"
